src/ui/snapshots/blackjack__ui__tests__a_mixed_wager_stacks_several_chips.snap
---
source: src/ui/mod.rs
expression: "table(&App::with_game(g), 74, 36)"
---
"                   ▜▛▜▖▜▛  ▗█▖ ▗▛▜▖▜▌▐▌ ▝█▘▗█▖ ▗▛▜▖▜▌▐▌                   "
"                   ▐▙▟▘▐▌  █ █ █   ▐▙▛   █ █ █ █   ▐▙▛                    "
"                   ▐▌▐▌▐▌▗▌█▀█ ▜▖▗▖▐▌▜▖█ █ █▀█ ▜▖▗▖▐▌▜▖                   "
"                   ▀▀▀ ▀▀▀▘▀ ▀  ▀▀ ▀▘▝▘▝▀▘ ▀ ▀  ▀▀ ▀▘▝▘                   "
"                                                                          "
"   DEALER  showing 10                                                     "
"                              ╭───╭───────╮                               "
"                              │10♦│╱╲╱╲╱╲╱│                               "
"                              │ ♦ │╲╱╲╱╲╱╲│                               "
"                              │ ♦ │╱╲╱╲╱╲╱│                               "
"                              │   │╲╱╲╱╲╱╲│                               "
"                              │ ♦ │╱╲╱╲╱╲╱│                               "
"                              │ ♦ │╲╱╲╱╲╱╲│                               "
"                              │   │╱╲╱╲╱╲╱│                               "
"                              ╰───╰───────╯                               "
"                                                                          "
"                          ╱▔▔▔▔▔▔▔▔$135▔▔▔▔▔▔▔▔╲                          "
"                         ╱  ▄▄▄   ▄▄▄   ▄▄▄     ╲                         "
"                        ▕   100   25     5   ×2  ▏                        "
"                         ╲  ▀▀▀   ▀▀▀   ▀▀▀     ╱                         "
"                          ╲▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁▁╱                          "
"                                                                          "
"                                                                          "
"   YOU  soft 18                                                           "
"                              ╭───╭───────╮                               "
"                              │A♠ │7♥     │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │   ♥   │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │       │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │     ♥7│                               "
"                              ╰───╰───────╯                               "
"                                                                          "
"   Your move.                      $365  shoe 312  count -2 (-0.3 true)   "
"   H hit  S stand  D double  P split  R fold  C count  Q quit             "
