src/ui/snapshots/blackjack__ui__tests__a_window_too_small_says_so_instead_of_panicking.snap
---
source: src/ui/mod.rs
expression: "table(&app, 40, 12)"
---
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
"Make the window taller — 23 rows needed "
"                                        "
"                                        "
"                                        "
"                                        "
"                                        "
