src/ui/snapshots/blackjack__ui__tests__betting_table.snap
---
source: src/ui/mod.rs
expression: "table(&app, 74, 32)"
---
"                   ▜▛▜▖▜▛  ▗█▖ ▗▛▜▖▜▌▐▌ ▝█▘▗█▖ ▗▛▜▖▜▌▐▌                   "
"                   ▐▙▟▘▐▌  █ █ █   ▐▙▛   █ █ █ █   ▐▙▛                    "
"                   ▐▌▐▌▐▌▗▌█▀█ ▜▖▗▖▐▌▜▖█ █ █▀█ ▜▖▗▖▐▌▜▖                   "
"                   ▀▀▀ ▀▀▀▘▀ ▀  ▀▀ ▀▘▝▘▝▀▘ ▀ ▀  ▀▀ ▀▘▝▘                   "
"                                                                          "
"   DEALER                                                                 "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"   YOU                                                                    "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"   Place your bet.                                                        "
"   ←/→ bet  1/2/3/4 chips  ENTER deal  Q quit   $500  bet $25  shoe 312   "
