src/ui/snapshots/blackjack__ui__tests__four_split_hands_still_fit.snap
---
source: src/ui/mod.rs
expression: "table(&App::with_game(g), 74, 32)"
---
"                   ▜▛▜▖▜▛  ▗█▖ ▗▛▜▖▜▌▐▌ ▝█▘▗█▖ ▗▛▜▖▜▌▐▌                   "
"                   ▐▙▟▘▐▌  █ █ █   ▐▙▛   █ █ █ █   ▐▙▛                    "
"                   ▐▌▐▌▐▌▗▌█▀█ ▜▖▗▖▐▌▜▖█ █ █▀█ ▜▖▗▖▐▌▜▖                   "
"                   ▀▀▀ ▀▀▀▘▀ ▀  ▀▀ ▀▘▝▘▝▀▘ ▀ ▀  ▀▀ ▀▘▝▘                   "
"                                                                          "
"   DEALER  showing 10                                                     "
"                              ╭───╭───────╮                               "
"                              │10♦│╱╲╱╲╱╲╱│                               "
"                              │ ♦ │╲╱╲╱╲╱╲│                               "
"                              │ ♦ │╱╲╱╲╱╲╱│                               "
"                              │   │╲╱╲╱╲╱╲│                               "
"                              │ ♦ │╱╲╱╲╱╲╱│                               "
"                              │ ♦ │╲╱╲╱╲╱╲│                               "
"                              │   │╱╲╱╲╱╲╱│                               "
"                              ╰───╰───────╯                               "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"   ▸ HAND 1  13        HAND 2  13        HAND 3  13         HAND 4  13    "
" ╭───╭───╭───────╮ ╭───╭───╭───────╮  ╭───╭───╭───────╮ ╭───╭───╭───────╮ "
" │8♠ │3♦ │2♣     │ │8♠ │3♦ │2♣     │  │8♠ │3♦ │2♣     │ │8♠ │3♦ │2♣     │ "
" │ ♠ │   │   ♣   │ │ ♠ │   │   ♣   │  │ ♠ │   │   ♣   │ │ ♠ │   │   ♣   │ "
" │   │   │       │ │   │   │       │  │   │   │       │ │   │   │       │ "
" │ ♠ │   │       │ │ ♠ │   │       │  │ ♠ │   │       │ │ ♠ │   │       │ "
" │   │   │       │ │   │   │       │  │   │   │       │ │   │   │       │ "
" │ ♠ │   │   ♣   │ │ ♠ │   │   ♣   │  │ ♠ │   │   ♣   │ │ ♠ │   │   ♣   │ "
" │   │   │     ♣2│ │   │   │     ♣2│  │   │   │     ♣2│ │   │   │     ♣2│ "
" ╰───╰───╰───────╯ ╰───╰───╰───────╯  ╰───╰───╰───────╯ ╰───╰───╰───────╯ "
" ─────────────────                                                        "
"   Your move.                                                             "
"   H hit  S stand  D double  P split  Q quit    $400  bet $25  shoe 312   "
