src/ui/snapshots/blackjack__ui__tests__settled_table_shows_the_result_banner.snap
---
source: src/ui/mod.rs
expression: "table(&App::with_game(g), 74, 32)"
---
"                               █ ▐▌▝█▘ █▖▐▌                               "
"                               █▗▐▌ █  █▜▟▌                               "
"                               █▛█▌ █  █ ▜▌                               "
"                               ▀ ▝▘▝▀▘ ▀ ▝▘                               "
"                                                                          "
"   DEALER  24 — BUST                                                      "
"                            ╭───╭───╭───────╮                             "
"                            │10♦│4♣ │10♠    │                             "
"                            │ ♦ │ ♣ │ ♠   ♠ │                             "
"                            │ ♦ │   │ ♠ ♠ ♠ │                             "
"                            │   │   │       │                             "
"                            │ ♦ │   │ ♠ ♠ ♠ │                             "
"                            │ ♦ │ ♣ │ ♠   ♠ │                             "
"                            │   │   │    ♠10│                             "
"                            ╰───╰───╰───────╯                             "
"                                   ▄▄▄                                    "
"                                   25                                     "
"                                   ▀▀▀                                    "
"                                                                          "
"   YOU  soft 18  WIN                                                      "
"                              ╭───╭───────╮                               "
"                              │A♠ │7♥     │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │   ♥   │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │       │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │     ♥7│                               "
"                              ╰───╰───────╯                               "
"                                                                          "
"   Dealer busts with 24. You win   $525  shoe 312  count -2 (-0.3 true)   "
"   ENTER next hand  C count  Q quit                                       "
