src/ui/snapshots/blackjack__ui__tests__short_window_drops_the_banner.snap
---
source: src/ui/mod.rs
expression: "table(&app, 74, 23)"
---
"   DEALER  showing 10                                                     "
"                              ╭───╭───────╮                               "
"                              │10♦│╲╱╲╱╲╱╲│                               "
"                              │ ♦ │╱╲╱╲╱╲╱│                               "
"                              │ ♦ │╲╱╲╱╲╱╲│                               "
"                              │   │╱╲╱╲╱╲╱│                               "
"                              │ ♦ │╲╱╲╱╲╱╲│                               "
"                              │ ♦ │╱╲╱╲╱╲╱│                               "
"                              │   │╲╱╲╱╲╱╲│                               "
"                              ╰───╰───────╯                               "
"   YOU  soft 18                                                           "
"                              ╭───╭───────╮                               "
"                              │A♠ │7♥     │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │   ♥   │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │       │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │     ♥7│                               "
"                              ╰───╰───────╯                               "
"                                                                          "
"   Your move.                                                             "
"   H hit  S stand  D double  P split  Q quit    $475  bet $25  shoe 312   "
