src/ui/snapshots/blackjack__ui__tests__split_shows_a_column_per_hand.snap
---
source: src/ui/mod.rs
expression: "table(&App::with_game(g), 74, 32)"
---
"                   ▜▛▜▖▜▛  ▗█▖ ▗▛▜▖▜▌▐▌ ▝█▘▗█▖ ▗▛▜▖▜▌▐▌                   "
"                   ▐▙▟▘▐▌  █ █ █   ▐▙▛   █ █ █ █   ▐▙▛                    "
"                   ▐▌▐▌▐▌▗▌█▀█ ▜▖▗▖▐▌▜▖█ █ █▀█ ▜▖▗▖▐▌▜▖                   "
"                   ▀▀▀ ▀▀▀▘▀ ▀  ▀▀ ▀▘▝▘▝▀▘ ▀ ▀  ▀▀ ▀▘▝▘                   "
"                                                                          "
"   DEALER  showing 10                                                     "
"                              ╭───╭───────╮                               "
"                              │10♦│╱╲╱╲╱╲╱│                               "
"                              │ ♦ │╲╱╲╱╲╱╲│                               "
"                              │ ♦ │╱╲╱╲╱╲╱│                               "
"                              │   │╲╱╲╱╲╱╲│                               "
"                              │ ♦ │╱╲╱╲╱╲╱│                               "
"                              │ ♦ │╲╱╲╱╲╱╲│                               "
"                              │   │╱╲╱╲╱╲╱│                               "
"                              ╰───╰───────╯                               "
"                                                                          "
"                                                                          "
"                                                                          "
"                                                                          "
"             HAND 1  11                          ▸ HAND 2  18             "
"            ╭───╭───────╮                        ╭───╭───────╮            "
"            │8♠ │3♦     │                        │8♥ │K♣     │            "
"            │ ♠ │   ♦   │                        │ ♥ │       │            "
"            │   │       │                        │   │   ♣   │            "
"            │ ♠ │   ♦   │                        │ ♥ │   K   │            "
"            │   │       │                        │   │   ♣   │            "
"            │ ♠ │   ♦   │                        │ ♥ │       │            "
"            │   │     ♦3│                        │   │     ♣K│            "
"            ╰───╰───────╯                        ╰───╰───────╯            "
"                                                 ─────────────            "
"   Your move.                                                             "
"   H hit  S stand  D double  P split  Q quit    $450  bet $25  shoe 312   "
