src/ui/snapshots/blackjack__ui__tests__surrendered_hand_is_labelled_and_bannered.snap
---
source: src/ui/mod.rs
expression: "table(&App::with_game(g), 74, 36)"
---
"                         ▜▛▀▌▗▛▙ ▜▛  ▜▛▙ ▜▛▀▌▜▛▙                          "
"                         ▐▙▌ █ ▐▌▐▌  ▐▌▐▌▐▙▌ ▐▌▐▌                         "
"                         ▐▌▘ ▜▖▟▘▐▌▗▌▐▌▟▘▐▌▘▖▐▌▟▘                         "
"                         ▀▀   ▀▘ ▀▀▀▘▀▀▘ ▀▀▀▘▀▀▘                          "
"                                                                          "
"   DEALER  14                                                             "
"                              ╭───╭───────╮                               "
"                              │10♦│4♣     │                               "
"                              │ ♦ │ ♣   ♣ │                               "
"                              │ ♦ │       │                               "
"                              │   │       │                               "
"                              │ ♦ │       │                               "
"                              │ ♦ │ ♣   ♣ │                               "
"                              │   │     ♣4│                               "
"                              ╰───╰───────╯                               "
"                                                                          "
"                                 ╱▔$25▔╲                                  "
"                                ╱  ▄▄▄  ╲                                 "
"                               ▕   25    ▏                                "
"                                ╲  ▀▀▀  ╱                                 "
"                                 ╲▁▁▁▁▁╱                                  "
"                                                                          "
"                                                                          "
"   YOU  16  SURRENDER                                                     "
"                              ╭───╭───────╮                               "
"                              │10♠│6♥     │                               "
"                              │ ♠ │ ♥   ♥ │                               "
"                              │ ♠ │       │                               "
"                              │   │ ♥   ♥ │                               "
"                              │ ♠ │       │                               "
"                              │ ♠ │ ♥   ♥ │                               "
"                              │   │     ♥6│                               "
"                              ╰───╰───────╯                               "
"                                                                          "
"   Surrendered. You lose $13.      $487  shoe 312  count +0 (+0.0 true)   "
"   ENTER next hand  C count  Q quit                                       "
