src/ui/snapshots/blackjack__ui__tests__tall_window_paints_the_betting_spot.snap
---
source: src/ui/mod.rs
expression: "table(&app, 74, 36)"
---
"                   ▜▛▜▖▜▛  ▗█▖ ▗▛▜▖▜▌▐▌ ▝█▘▗█▖ ▗▛▜▖▜▌▐▌                   "
"                   ▐▙▟▘▐▌  █ █ █   ▐▙▛   █ █ █ █   ▐▙▛                    "
"                   ▐▌▐▌▐▌▗▌█▀█ ▜▖▗▖▐▌▜▖█ █ █▀█ ▜▖▗▖▐▌▜▖                   "
"                   ▀▀▀ ▀▀▀▘▀ ▀  ▀▀ ▀▘▝▘▝▀▘ ▀ ▀  ▀▀ ▀▘▝▘                   "
"                                                                          "
"   DEALER  showing 10                                                     "
"                              ╭───╭───────╮                               "
"                              │10♦│╱╲╱╲╱╲╱│                               "
"                              │ ♦ │╲╱╲╱╲╱╲│                               "
"                              │ ♦ │╱╲╱╲╱╲╱│                               "
"                              │   │╲╱╲╱╲╱╲│                               "
"                              │ ♦ │╱╲╱╲╱╲╱│                               "
"                              │ ♦ │╲╱╲╱╲╱╲│                               "
"                              │   │╱╲╱╲╱╲╱│                               "
"                              ╰───╰───────╯                               "
"                                                                          "
"                                 ╱▔$25▔╲                                  "
"                                ╱  ▄▄▄  ╲                                 "
"                               ▕   25    ▏                                "
"                                ╲  ▀▀▀  ╱                                 "
"                                 ╲▁▁▁▁▁╱                                  "
"                                                                          "
"                                                                          "
"   YOU  soft 18                                                           "
"                              ╭───╭───────╮                               "
"                              │A♠ │7♥     │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │   ♥   │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │       │                               "
"                              │   │ ♥   ♥ │                               "
"                              │   │     ♥7│                               "
"                              ╰───╰───────╯                               "
"                                                                          "
"   Your move.                      $475  shoe 312  count -2 (-0.3 true)   "
"   H hit  S stand  D double  P split  R fold  C count  Q quit             "
